@@ -1,7 +1,7 @@
-# Encoding file: koi8-u, single-byte                            
-S                                                               
-003F 0 1                                                        
-00                                                              
+# Encoding file: koi8-u, single-byte
+S
+003F 0 1
+00
 0000000100020003000400050006000700080009000A000B000C000D000E000F
 0010001100120013001400150016001700180019001A001B001C001D001E001F
 0020002100220023002400250026002700280029002A002B002C002D002E002F
